--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -87,3 +87,16 @@ body {
     border-bottom: 0;
   }
 }
+
+
+
+#preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  background: #f6f6f6 url('../images/ring.gif') no-repeat center center;
+}
