--- a/app/views/includes/header.html
+++ b/app/views/includes/header.html
@@ -1,26 +1,38 @@
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+<div id="preloader" ng-show="loadingView"></div>
+<div class="header">
+  <div class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#/">Customer Support</a>
+      </div>
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+      <div>
+        <ul id="header_list"  class="nav navbar-nav margin_50">
+          <li><a ng-href="#/">Home </a></li>
+          <li><a href="#/my_tickets">MyTickets</a></li>
+          <li><a href="#/new_ticket">+ New Ticket</a></li>
+        </ul>
 
-            <a class="navbar-brand" href="#/">customerSupportWeb</a>
-          </div>
+        <div class="dropdown pull-right" style="padding:12px 50px 0px 0px">
+          <span>Hi, Praveen</span>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
+          <div class="dropdown-content">
+            <p>
+              <span class="btn btn-danger btn-lg" ng-click="doLogout()">Logout
+              </span>
+            </p>
           </div>
         </div>
       </div>
+
     </div>
+
+  </div>
+</div>
+
+<script>
+  $(".nav li").on("click", function() {
+    $(".nav li").removeClass("active");
+    $(this).addClass("active");
+  });
+</script>
