fixed untracked files

--- a/app/views/includes/header.html
+++ b/app/views/includes/header.html
@@ -3,13 +3,13 @@
   <div class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#/">Customer Support</a>
+        <a class="navbar-brand" href="#">Customer Support</a>
       </div>
 
       <div>
         <ul id="header_list"  class="nav navbar-nav margin_50">
-          <li><a ng-href="#/">Home </a></li>
-          <li><a href="#/my_tickets">MyTickets</a></li>
+          <li><a ng-href="/">Home </a></li>
+          <li><a href="#/my_issues">MyTickets</a></li>
           <li><a href="#/new_ticket">+ New Ticket</a></li>
         </ul>
 
