--- a/app/views/includes/header.html
+++ b/app/views/includes/header.html
@@ -14,7 +14,7 @@
         </ul>
 
         <div class="dropdown pull-right" style="padding:12px 50px 0px 0px">
-          <span>Hi, Praveen</span>
+          <span>Hi, {{current_user["name"]}}</span>
 
           <div class="dropdown-content">
             <p>
