--- a/app/views/includes/header.html
+++ b/app/views/includes/header.html
@@ -1,34 +1,35 @@
 <div id="preloader" ng-show="loadingView"></div>
-<div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#/">Customer Support</a>
-      </div>
-
-      <div>
-        <ul id="header_list"  class="nav navbar-nav margin_50">
-          <li><a ng-href="#/">Home </a></li>
-          <li><a href="#/my_tickets">MyTickets</a></li>
-          <li><a href="#/new_ticket">+ New Ticket</a></li>
-        </ul>
-
-        <div class="dropdown pull-right" style="padding:12px 50px 0px 0px">
-          <span>Hi, Praveen</span>
-
-          <div class="dropdown-content">
-            <p>
-              <span class="btn btn-danger btn-lg" ng-click="doLogout()">Logout
-              </span>
-            </p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
+<nav class="navbar navbar-default navbar-inverse" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#/">Customer Support</a>
   </div>
-</div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#/my_tickets">My Tickets</a></li>
+      <li><a href="#/new_issue">New Ticket</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#/login">Login</a></li>
+      <li><a href="#/register">Register</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi, Praveen <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a ng-click="doLogout()">Logout</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
 
 <script>
   $(".nav li").on("click", function() {
