--- a/app/views/includes/header.html
+++ b/app/views/includes/header.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li><a href="/my_issues">My Tickets</a></li>
-      <li><a href="/new_ticket">New Ticket</a></li>
+      <li><a href="/new_issue">New Ticket</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li ng-if="current_user == null"><a href="#/login">Login</a></li>
