--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -3,37 +3,31 @@
   <p class="lead">
     Always a pleasure serving you.
   </p>
-  <p><a class="btn btn-primary" ng-href="#/login">Get started</a></p>
-
-  <!--<div ng-if="current_user==null">-->
-    <form ng-submit="submitLogin()">
-      <div class="imgcontainer">
-        <img src="images/yeoman.png" alt="Avatar" class="avatar">
-      </div>
-
-      <div class="container">
-        <label><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" ng-model="email" required>
-
-        <label><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" ng-model="password" required>
-
-        <label><b>Login As</b></label>
-        <select ng-model="role" ng-options="role as role for role in roles"></select>
-
-
-        <button type="submit">Login</button>
-        <input type="checkbox" checked="checked"> Remember me</div>
-
-      <div class="container" style="background-color:#f1f1f1">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <span class="psw">Forgot <a href="#">password?</a></span>
-      </div>
-    </form>
-  <!--</div>-->
 </div>
-
-
-<div class="row marketing">
-  <span ng-if="error != null" >{{error}}</span>
+<div class="col-md-4 col-md-offset-4 well text-left mt-10-sm" style="margin-top: -80px;">
+  <form ng-submit="submitLogin()">
+    <div class="text-center">
+      <span class="text-danger" ng-if="error != null" >{{error}}</span>
+    </div>
+    <div class="col-md-12 mt-10">
+      <label><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" class="form-control" ng-model="email" required>
+    </div>
+    <div class="col-md-12 mt-10">
+      <label><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" class="form-control" ng-model="password" required>
+    </div>
+    <div class="col-md-12 mt-10">
+      <label><b>Login As</b></label>
+      <select ng-model="role" ng-options="role as role for role in roles" class="form-control">
+      </select>
+    </div>
+    <div class="col-md-12 mt-10">
+      <input type="checkbox" checked="checked"> Remember me
+    </div>
+    <div class="col-md-12 mt-20">
+      <button type="submit" class="btn btn-primary">Login</button>
+      <small class="psw pull-right">Forgot <a href="#">password?</a></small>
+    </div>
+  </form>
 </div>
