--- a/app/views/customer/home.html
+++ b/app/views/customer/home.html
@@ -1,28 +1,14 @@
 <div class="row" ng-controller="HomeCustomerController" ng-init="fetchIssues(page_number)">
   <div class="mt-50">
   <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12 well-div">
-    <!-- <form class="form-horizontal row" role="form" ng-submit="fetchIssues(page_number)">
-      <div class="form-group col-md-4">
-        <label class="control-label col-sm-3">IssueType:</label>
-        <div class="col-sm-9">
-          <p class="form-control-static">
-            <select ng-change="fetchIssues(page_number)" ng-model="issue_search_form.issue_type" ng-options="issue_type as issue_type for issue_type in configs.issue_types">
-            </select>
-          </p>
-        </div>
-      </div>
-
-      <div class="form-group col-md-4">
-        <input type="submit" name="commit" value="Search" class="btn-on-submit">
-      </div>
-    </form> -->
     <div class="text-center">
       <div ng-if="getallAgenciesError" class="alert" ng-class="alert-danger">
         <span > {{getallAgenciesError}}</span>
       </div>
     </div>
     <ul class="nav nav-tabs">
-      <li class="active"><a data-target="#home" data-toggle="tab" class="cursor">All Issues</a></li>
+      <li class="active"><a data-target="#home" data-toggle="tab" class="cursor">All Issues</a>
+      </li>
       <li><a data-target="#open" data-toggle="tab" class="cursor">Open</a></li>
       <li><a data-target="#closed" data-toggle="tab" class="cursor">Closed</a></li>
     </ul>
@@ -32,21 +18,25 @@
       <div class="tab-pane active" id="home">
         <div ng-if="!getallAgenciesError" ng-repeat="issue in allIssues">
           <h4 class="mt-20">{{issue.title}}</h4>
-          <label class="label label-warning pull-right">{{issue.status}}</label>
           <p class="mt-10">{{issue.description}}</p>
           <hr>
         </div>
-        <div class="pt-30 pb-30">
-          <ul class="pagination pull-right">
-            <li><a class="cursor" ng-if="page_number>1" ng-click="fetchIssues(page_number-1)">Previous</a></li>
-            <li><a class="cursor" ng-click="fetchIssues(page_number+1)">Next</a></li>
-          </ul>
+      </div>
+      <div class="tab-pane" id="open">
+        <div ng-if="!getallAgenciesError" ng-repeat="issue in allIssues">
+          <h4 class="mt-20">{{issue.title}}</h4>
+          <p class="mt-10">{{issue.description}}</p>
+          <hr>
         </div>
       </div>
-      <div class="tab-pane" id="open">...</div>
-      <div class="tab-pane" id="closed">...</div>
+      <div class="tab-pane" id="closed">
+        <div ng-if="!getallAgenciesError" ng-repeat="issue in allIssues">
+          <h4 class="mt-20">{{issue.title}}</h4>
+          <p class="mt-10">{{issue.description}}</p>
+          <hr>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 </div>
-
