--- a/app/views/customer/new_issue.html
+++ b/app/views/customer/new_issue.html
@@ -2,17 +2,14 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12 col-lg-6 col-lg-offset-3">
 			<div class="form-div">
-				<form role="form">
+				<form role="form" ng-submit="createIssue()">
 				  <div class="form-group">
-				    <label for="exampleInputEmail1">Issue Type</label>
-				    <select class="form-control">
-						  <option>1</option>
-						  <option>2</option>
-						</select>
+				    <label for="exampleInputPassword1">Subject</label>
+				    <textarea ng-model="title" class="form-control" style="height: 40px;"></textarea>
 				  </div>
 				  <div class="form-group">
-				    <label for="exampleInputPassword1">Description</label>
-				    <textarea class="form-control" style="height: 120px;"></textarea>
+				    <label for="exampleInputPassword1">Detailed Description</label>
+				    <textarea ng-model="description" class="form-control" style="height: 160px;"></textarea>
 				  </div>
 				  <button type="submit" class="btn btn-primary pull-right">Submit</button>
 				</form>
