--- a/app/views/admin/home.html
+++ b/app/views/admin/home.html
@@ -1,24 +1,9 @@
-<div class="row" ng-controller="HomeCustomerController" ng-init="fetchIssues(page_number)">
+<div class="row" ng-controller="HomeCustomerController" ng-init="fetchIssues()">
   <div class="mt-50">
   <div class="col-md-8 col-md-offset-2">
     <h2 class="text-success">Admin Dashboard</h2>
   </div>
   <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12 well-div">
-    <!-- <form class="form-horizontal row" role="form" ng-submit="fetchIssues(page_number)">
-      <div class="form-group col-md-4">
-        <label class="control-label col-sm-3">IssueType:</label>
-        <div class="col-sm-9">
-          <p class="form-control-static">
-            <select ng-change="fetchIssues(page_number)" ng-model="issue_search_form.issue_type" ng-options="issue_type as issue_type for issue_type in configs.issue_types">
-            </select>
-          </p>
-        </div>
-      </div>
-
-      <div class="form-group col-md-4">
-        <input type="submit" name="commit" value="Search" class="btn-on-submit">
-      </div>
-    </form> -->
     <div class="text-center">
       <div ng-if="getallAgenciesError" class="alert" ng-class="alert-danger">
         <span > {{getallAgenciesError}}</span>
