--- a/app/views/customer/home.html
+++ b/app/views/customer/home.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="HomeCustomerController" ng-init="fetchIssues(page_number)">
+<div class="row" ng-controller="HomeCustomerController" ng-init="fetchIssues()">
   <div class="mt-50">
   <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12 well-div">
     <div class="text-center">
