--- a/app/views/customer/new_issue.html
+++ b/app/views/customer/new_issue.html
@@ -2,14 +2,20 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12 col-lg-6 col-lg-offset-3">
 			<div class="form-div">
+			    <div class="text-center">
+      				<span class="text-danger" ng-if="error != null" >{{error}}</span>
+    			</div>
+			    <div class="text-center">
+      				<span class="text-success" ng-if="success != null" >{{success}}</span>
+    			</div>
 				<form role="form" ng-submit="createIssue()">
 				  <div class="form-group">
 				    <label for="exampleInputPassword1">Subject</label>
-				    <textarea ng-model="title" class="form-control" style="height: 40px;"></textarea>
+				    <input type="text" ng-model="title" class="form-control" style="height: 40px;" required>
 				  </div>
 				  <div class="form-group">
 				    <label for="exampleInputPassword1">Detailed Description</label>
-				    <textarea ng-model="description" class="form-control" style="height: 160px;"></textarea>
+				    <input type="text" ng-model="description" class="form-control" style="height: 160px;" required>
 				  </div>
 				  <button type="submit" class="btn btn-primary pull-right">Submit</button>
 				</form>
