--- a/app/views/executive/home.html
+++ b/app/views/executive/home.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="HomeCustomerController" ng-init="fetchIssues()">
+<div class="row" ng-controller="HomeExecutiveController" ng-init="fetchIssues()">
   <div class="mt-50">
   <div class="col-md-8 col-md-offset-2">
     <h2 class="text-success">Executive Dashboard</h2>
