--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-12 mt-20">
       <button type="submit" class="btn btn-primary">Login</button>
-      <small class="psw pull-right" onclick="$('.register').hide();$('.signin').hide();$('.forgot-password').show();">Forgot password?</a></small>
+      <small class="psw pull-right cursor" onclick="$('.register').hide();$('.signin').hide();$('.forgot-password').show();">Forgot password?</a></small>
     </div>
 
     <div class="col-md-12 mt-20 text-center">
